<resources>
    <string name="app_name">MyNotePade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="exit">Exit</string>
    <string name="Test_text">User\'s Name</string>
    <string name="setting">Setting</string>
    <string name="share_app">Share App</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title">Title : </string>
    <string name="description">Description : </string>
    <string name="date">Date : </string>
    <string name="time">Time : </string>
    <string name="save_note">save note</string>
    <string name="please_wright_your_note_here">Please Wright and Save Your Note Here</string>
    <string name="adding_note_successfully">The Note was added successfully !</string>
    <string name="adding_note_failed">Error in Saving Note, Please try again!</string>
    <string name="please_edit_your_note_and_save_it">Please Edit Your Note and save it.</string>
    <string name="test_gmail_com">shahryar.hejazipour90@gmail.com</string>
    <string name="add_a_new_note">Add a new Note</string>
    <string name="https_android_learn_ir">https://android-learn.ir</string>
    <string name="address">تهران میدان ولی عصر خیابان شقایق کوچه سوم پلاک ۵ طبقه ۲ واحد ۲۱</string>
    <string name="phone_number">021–88946636</string>
    <string name="font_changing">Font Size</string>
    <string name="font_size">Example Text</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_profile_s_image">Select Profile\'s Image by touching below icon :</string>
    <string name="username">UserName</string>
    <string name="save_profile">save profile</string>
    <string name="enter_your_username">Enter Your UserName</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ask_for_delete">Do you want to Delete All Notes ?</string>
    <string name="ask_for_delete_one_note">Are You Sure for Delete This Note ?</string>
    <string name="deleting_this_note">Deleting This Note…</string>
    <string name="deleting_all_notes">Deleting All Your Notes…</string>
    <string name="select_profile_image">Select Profile Image…</string>
    <string name="where_select_profile_image">Where You want to select Profile Image?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="access_denied_message_camera">You Almost Denied Access Permission to Camera</string>
    <string name="nazanin">Nazanin</string>
    <string name="child">Child</string>
    <string name="titr">Titr</string>
    <string name="save_settings">Save Settings</string>
    <string name="nile">NILE</string>
    <string name="font_style">Font Style</string>
    <string name="no_notes_for_delete">There is no any Notes to Delete !</string>
    <string name="Click_on_web">For Visit Us Please Click on this Web address : </string>
    <string name="click_address">For find us Please Touch Below Address :</string>
    <string name="click_on_email">For Sending Email to us Please Touch Below Email:</string>
    <string name="for_contact_with_us_please_touch_below_phone_number">For Contact with us Please Touch Below Phone Number :</string>
    <string name="date_btn">date</string>
    <string name="time_btn">time</string>
</resources>