<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.settingFragment.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_font_size_change"
        android:layout_below="@id/toolbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_changing"
        android:layout_marginTop="@dimen/radius_8"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/radius_8"/>

    <androidx.cardview.widget.CardView
        android:padding="@dimen/radius_8"
        android:id="@+id/card_view_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_8"
        android:layout_below="@+id/txt_font_size_change"
        android:layout_marginTop="@dimen/radius_8"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size"
                android:textSize="@dimen/text_size_16sp"
                android:id="@+id/txt_font_size"
                android:layout_centerHorizontal="true"
                />
            <SeekBar
                android:layout_below="@+id/txt_font_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar_font_size"
                android:max="25"
                android:progress="16"
                android:layout_margin="@dimen/radius_8"
                android:thumb="@drawable/thumb_seekbar"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_font_change"
                android:layout_below="@id/seekBar_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_style"
                android:layout_marginTop="@dimen/radius_8"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/radius_8"/>
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_marginRight="@dimen/radius_8"
                android:layout_marginLeft="@dimen/radius_8"
                android:layout_below="@+id/txt_font_change"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_nazanin"
                    android:text="@string/nazanin"
                    android:checked="true"
                    android:layoutDirection="ltr"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_child"
                    android:text="@string/child"
                    android:layoutDirection="ltr"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_titr"
                    android:text="@string/titr"
                    android:layoutDirection="ltr"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_mj"
                    android:text="@string/nile"
                    android:layoutDirection="ltr"/>

            </RadioGroup>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_settings"
                android:layout_below="@+id/radio_group"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>



    </androidx.cardview.widget.CardView>




</RelativeLayout>