<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.aboutUsFragment.AboutUsFragment"
    android:background="@drawable/ic_alternating_arrowhead">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_web_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar2"
        android:layout_marginTop="@dimen/margin_150"
        android:text="@string/Click_on_web"
        android:textStyle="bold"
        android:textColor="@color/phirooz"
        android:layout_marginLeft="@dimen/margin_16"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_below="@id/lbl_web_address"
        android:id="@+id/txt_web_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/https_android_learn_ir"
        android:layout_centerHorizontal="true"
       android:layout_marginTop="@dimen/margin_20"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_address"
        android:layout_below="@id/txt_web_address"
        android:layout_marginTop="@dimen/margin_70"
        android:textColor="@color/phirooz"
        android:layout_marginLeft="@dimen/margin_16"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_below="@id/lbl_address"
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:text="@string/address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_20"
        android:textColor="#2196F3"
        android:textStyle="bold"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_new_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_new_note"
        android:layout_below="@id/txt_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_70"

        />

</RelativeLayout>