<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_alternating_arrowhead"
    tools:context=".views.contactUsFragment.ContactUsFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_shape"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:layout_alignParentStart="true" />


    </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_web_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar2"
        android:layout_marginTop="@dimen/margin_150"
        android:text="@string/click_on_email"
        android:textStyle="bold"
        android:textColor="@color/phirooz"
        android:layout_marginLeft="@dimen/margin_16"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_below="@id/lbl_web_address"
        android:id="@+id/txt_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:text="@string/test_gmail_com"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_20"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_email_address"
        android:layout_marginTop="@dimen/margin_70"
        android:text="@string/for_contact_with_us_please_touch_below_phone_number"
        android:textStyle="bold"

        android:textColor="@color/phirooz"
        android:layout_marginLeft="@dimen/margin_16"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_below="@id/lbl_phone_number"
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:text="@string/phone_number"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_20"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_new_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_new_note"
        android:layout_below="@id/txt_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_70"
        android:background="@drawable/btn_shape"
        android:paddingLeft="@dimen/radius_8"
        android:paddingRight="@dimen/radius_8"
        android:textColor="@color/white"
        />





</RelativeLayout>