<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_alternating_arrowhead"
    tools:context=".views.addNoteFragment.AddNoteFragment">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_shape"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                android:layout_alignParentStart="true" />


        </RelativeLayout>





    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar2"
        android:textColor="@color/phirooz"
        android:textStyle="bold"
        android:text="@string/please_wright_your_note_here"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_20"
        android:textSize="@dimen/txt_size_20"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_txt_layout"
        android:layout_below="@id/toolbar2"
        android:layout_marginTop="@dimen/margin_70"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edt_txt_title"
            android:background="@drawable/edt_shape"
            android:hint="@string/title"/>


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_txt_layout1"
        android:layout_below="@id/edt_txt_layout"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edt_txt_description"
            android:hint="@string/description"
            android:background="@drawable/edt_shape"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_below="@+id/edt_txt_layout1"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_btn"
            android:id="@+id/btn_date"
            android:padding="@dimen/radius_8"
            android:textAllCaps="false"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:background="@drawable/btn_shape"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_btn"
            android:id="@+id/btn_time"
            android:layout_marginLeft="@dimen/margin_150"
            android:background="@drawable/btn_shape"
            android:padding="@dimen/radius_8"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/btn_date"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_note"
            android:id="@+id/btn_save"
            android:padding="@dimen/radius_8"
            android:textAllCaps="false"
            android:background="@drawable/btn_shape"
            android:textColor="@color/white"
            android:layout_below="@id/btn_time"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"

            />



    </RelativeLayout>



</RelativeLayout>