<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_alternating_arrowhead"
    tools:context=".EditProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_profile_s_image"
        android:layout_below="@id/toolbar2"
        android:textColor="@color/phirooz"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_20"
        android:src="@mipmap/ic_launcher_round"
        android:layout_below="@id/lbl_profile_image"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_username"
        android:layout_below="@id/image_profile"
        android:textColor="@color/phirooz"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_70"
        android:layout_marginLeft="@dimen/margin_20"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_below="@id/lbl_username"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_profile"
        android:layout_below="@id/txt_input_layout"
        android:layout_marginTop="@dimen/margin_150"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_save"/>

</RelativeLayout>