<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="Note"
            type="com.shahryar960103.mynotepade.models.Note" />

    </data>



    <RelativeLayout

        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView

            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="@dimen/radius_8"
            android:layout_margin="@dimen/radius_8">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rel_item"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="@dimen/radius_8"
                    android:text="@string/title"
                    android:textColor="@color/phirooz"
                    android:textStyle="bold"

                    />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_title"
                    android:layout_toRightOf="@+id/lbl_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/radius_8"
                    android:text="@{Note.title}"
                    android:textStyle="bold"
                    />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_description"
                    android:layout_below="@+id/lbl_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="@dimen/radius_8"
                    android:text="@string/description"
                    android:textColor="@color/phirooz"
                    android:textStyle="bold"

                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_description"
                    android:layout_toRightOf="@id/lbl_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/radius_8"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:ellipsize="end"
                    android:text="@{Note.description}"
                    android:textStyle="bold"
                    android:layout_below="@+id/lbl_title"
                    />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_description"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="@dimen/radius_8"
                    android:textColor="@color/phirooz"
                    android:textStyle="bold"
                    android:text="@string/time" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_time"
                    android:layout_toRightOf="@id/lbl_time"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/radius_8"
                    android:text="@{Note.timeNote}"
                    android:layout_below="@id/txt_description"
                    android:layout_alignTop="@id/lbl_time"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_time"
                    android:layout_marginTop="@dimen/radius_8"
                    android:layout_marginLeft="@dimen/radius_8"
                    android:text="@string/date"
                    android:textColor="@color/phirooz"
                    android:textStyle="bold"

                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_time"
                    android:layout_marginLeft="@dimen/radius_8"
                    android:layout_alignTop="@id/lbl_date"
                    android:layout_toRightOf="@id/lbl_date"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:text="@{Note.dateNote}"

                    />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    app:srcCompat="@drawable/ic_baseline_delete_24"
                    android:tint="#686363"
                    android:layout_margin="@dimen/margin_16"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toLeftOf="@id/img_delete"
                    app:srcCompat="@drawable/ic_baseline_share_24"
                    android:tint="#686363"
                    android:layout_margin="@dimen/margin_16"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toLeftOf="@id/img_share"
                    app:srcCompat="@drawable/ic_baseline_edit_24"
                    android:tint="#686363"
                    android:layout_margin="@dimen/margin_16"/>


            </RelativeLayout>







        </androidx.cardview.widget.CardView>








    </RelativeLayout>

</layout>

